# autosubst

./: .gitignore  CHANGELOG.md  LICENSE  Make  MakeEx  Makefile  README  README.md  bib.bib  coq-autosubst-ci.opam  coq-autosubst-examples-plain.opam  coq-autosubst-examples-ssreflect.opam  coq-autosubst.opam  default.nix  dune-project  extra  manual.tex  meta.yml
.github/workflows/: coq-ci.yml  docker-action.yml  docker-ci.yml  nix-ci.yml
examples/: ARS.v  Demo.v  MLTT.v  Makefile  POPLmark.v  POPLmark_B.v  POPLmark_factorized_trans.v  POPLmark_no_wf.v  SystemF.v  demo.v  poplmark.v
examples/plain/: Context.v  Decidable.v  Demo.v  Makefile  POPLmark.v  Size.v  _CoqProject  dune
examples/ssr/: ARS.v  AutosubstSsr.v  BetaSubstitution.v  CR.v  Context.v  Decidable.v  MLTT.v  Makefile  POPLmark.v  SystemF_CBV.v  SystemF_SN.v  _CoqProject  dune  notes.v  pred_CC_omega.v
extra/: coqdoc.css  header.html
extra/resources/: coqdoc.css  interactive.css  postprocess.js
theories/: Autosubst.v  Autosubst_Basics.v  Autosubst_Classes.v  Autosubst_Derive.v  Autosubst_Lemmas.v  Autosubst_MMap.v  Autosubst_MMapInstances.v  Autosubst_Tactics.v  Basics.v  Classes.v  Context.v  Contexts.v  Decidable.v  Derive.v  Lemmas.v  Lib.v  MMap.v  MMapInstances.v  Makefile  Morphisms.v  Size.v  Sorts.v  Tactics.v  _CoqProject  dune
theories/Autosubst/: Autosubst.v  Classes.v  Derive.v  Lemmas.v  MMap.v  MMapInstances.v  Tactics.v
