opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/autosubst"
dev-repo: "git+https://github.com/coq-community/autosubst.git"
bug-reports: "https://github.com/coq-community/autosubst/issues"
license: "MIT"

synopsis: "Autosubst (CI only)"

build: [make "-j%{jobs}%" "all"]
depends: [
  "coq"
  "coq-mathcomp-ssreflect"
]
