opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/autosubst"
dev-repo: "git+https://github.com/coq-community/autosubst.git"
bug-reports: "https://github.com/coq-community/autosubst/issues"
license: "MIT"

synopsis: "Ssreflect Autosubst examples"

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {(>= "8.10" & < "8.14~") | (= "dev")}
  "coq-autosubst" {= "dev"}
  "coq-mathcomp-ssreflect" {(>= "1.9" & < "1.13~") | (= "dev")}
]

tags: [
  "category:Computer Science/Lambda Calculi"
  "keyword:abstract syntax"
  "keyword:binders"
  "keyword:de Bruijn indices"
  "keyword:substitution"
  "logpath:AutosubstSsr"
]
authors: [
  "Steven Schäfer"
  "Tobias Tebbi"
]
